fix failed when running not from source code